src/human_study/program_11/python_err_msg.txt
File "./seq2parse/human_study/program_11/original.py", line 3
    list = []
    ^
IndentationError: expected an indented block after function definition on line 2
